Fix overflow a bit

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,10 @@
 .buttonRow {
-  overflow-x: auto;
+  overflow: auto;
   white-space: nowrap;
+  margin-left: -22px;
+  margin-right: -22px;
+  margin-bottom: -22px;
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-bottom: 22px;
 }
